BCAPP-6239 : Textfield alignment fixed

--- a/src/components/input/dropdown/v2/Dropdown.module.scss
+++ b/src/components/input/dropdown/v2/Dropdown.module.scss
@@ -160,12 +160,16 @@
 					letter-spacing: var(--font-font-spacing-small, 0.16px);
 				}
 			}
+
 			.text-field {
+				padding-top: 5%;
+
 				[data-elem='base-cell'] {
 					border: none !important;
 					box-shadow: none !important;
 					outline: none;
 					width: auto !important;
+					transition: none !important;
 				}
 
 				[data-elem='input'] {
